tests/solidity-semantic-tests/results_final2.txt
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1245, in send_atomic_transaction_composer
    atc = prepare_group_for_sending(
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 867, in prepare_group_for_sending
    execution_info = _get_group_execution_info(
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 726, in _get_group_execution_info
    raise ValueError(
ValueError: Error resolving execution info via simulate in transaction 0: transaction HXR27P46V6W65WPXAUR7X42TXJUE4AXBDFEDAVX6BNM67IICLD2A: logic eval error: attempt to self-call. Details: app=1009, pc=600, opcodes=pushbytes 0x546573744e616d65 // "TestName"; itxn_field ApplicationArgs; itxn_submit
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1245, in send_atomic_transaction_composer
    atc = prepare_group_for_sending(
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 867, in prepare_group_for_sending
    execution_info = _get_group_execution_info(
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 726, in _get_group_execution_info
    raise ValueError(
ValueError: Error resolving execution info via simulate in transaction 0: transaction R6H2RCQBGUUKZ3YCENSBPHUMBAI3XFHVDA5HCQZOMMPHPBQPXGJQ: logic eval error: assert failed pc=393. Details: app=1013, pc=393, opcodes=return; label12:; intc_1 // 0; assert
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1245, in send_atomic_transaction_composer
    atc = prepare_group_for_sending(
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 867, in prepare_group_for_sending
    execution_info = _get_group_execution_info(
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 726, in _get_group_execution_info
    raise ValueError(
ValueError: Error resolving execution info via simulate in transaction 0: transaction WYKCUTWPTVQRHGV2XMFMO7XXHX6AMCLYHUUOYCJDSLI7CU44ZM4A: logic eval error: assert failed pc=90. Details: app=1019, pc=90, opcodes=return; label3:; intc_1 // 0; assert
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1245, in send_atomic_transaction_composer
    atc = prepare_group_for_sending(
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 867, in prepare_group_for_sending
    execution_info = _get_group_execution_info(
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 726, in _get_group_execution_info
    raise ValueError(
ValueError: Error resolving execution info via simulate in transaction 0: transaction BWCXXXLIG3BZC575NQSZH2U6G53KJDINZRD66RMW2XNSRY3PK4VQ: logic eval error: app 7793644116795425341 does not exist. Details: app=1023, pc=269, opcodes=pushbytes 0x002807a5a31b000000000000000000000000000000000000000000000000000000000000123461621234 // 0x002807a5a31b000000000000000000000000000000000000000000000000000000000000123461621234; itxn_field ApplicationArgs; itxn_submit
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1245, in send_atomic_transaction_composer
    atc = prepare_group_for_sending(
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 867, in prepare_group_for_sending
    execution_info = _get_group_execution_info(
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 726, in _get_group_execution_info
    raise ValueError(
ValueError: Error resolving execution info via simulate in transaction 0: transaction 5V4NMNFIVKRZWU5M3G3KLLPPCZQIM4NEDUQ37PW2LYJYUIXFIZ4Q: logic eval error: app 7793644116795425341 does not exist. Details: app=1023, pc=384, opcodes=pushbytes 0x0044d27922c600000000000000000000000000000000000000000000000000000000000012340000000000000000000000000000000000000000000000000000000000001234 // 0x0044d27922c600000000000000000000000000000000000000000000000000000000000012340000000000000000000000000000000000000000000000000000000000001234; itxn_field ApplicationArgs; itxn_submit
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1245, in send_atomic_transaction_composer
    atc = prepare_group_for_sending(
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 867, in prepare_group_for_sending
    execution_info = _get_group_execution_info(
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 726, in _get_group_execution_info
    raise ValueError(
ValueError: Error resolving execution info via simulate in transaction 0: transaction GDWBPKKY7A6T3Z2HNKK6VLGWOEG24X47OC2AJVCMIEF3O52M5L4A: logic eval error: roundCowBase.getCreator() cidx: 14865398991003647707 ctype: 1 err: sql: converting argument $1 type: uint64 values with high bit set are not supported. Details: app=1071, pc=984, opcodes=dup; itxn_field ApplicationArgs; itxn_submit
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1245, in send_atomic_transaction_composer
    atc = prepare_group_for_sending(
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 867, in prepare_group_for_sending
    execution_info = _get_group_execution_info(
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 726, in _get_group_execution_info
    raise ValueError(
ValueError: Error resolving execution info via simulate in transaction 0: transaction TVGWRJSNFEVRLTTERWEO4G6KP6NPWJ2UJI7Z3MSD772LRNB7AQBA: logic eval error: roundCowBase.getCreator() cidx: 14865398991003647707 ctype: 1 err: sql: converting argument $1 type: uint64 values with high bit set are not supported. Details: app=1071, pc=1209, opcodes=dup; itxn_field ApplicationArgs; itxn_submit
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1245, in send_atomic_transaction_composer
    atc = prepare_group_for_sending(
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 867, in prepare_group_for_sending
    execution_info = _get_group_execution_info(
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 726, in _get_group_execution_info
    raise ValueError(
ValueError: Error resolving execution info via simulate in transaction 0: transaction YCH6XOEVJ4FJE3ZSU6YYWD7APADHRKGGFHCWCRROTYGTZKZ7R45Q: logic eval error: extraction end 32 is beyond length: 0. Details: app=1085, pc=105, opcodes=swap; substring3; extract 0 32
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1245, in send_atomic_transaction_composer
    atc = prepare_group_for_sending(
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 867, in prepare_group_for_sending
    execution_info = _get_group_execution_info(
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 726, in _get_group_execution_info
    raise ValueError(
ValueError: Error resolving execution info via simulate in transaction 0: transaction 64FIRRIKGCHULVKMQSERI5WSDGUUZQKHQ7UAJIKSQKQRC5F3UEQA: logic eval error: roundCowBase.getCreator() cidx: 17105802135462940835 ctype: 1 err: sql: converting argument $1 type: uint64 values with high bit set are not supported. Details: app=1095, pc=383, opcodes=pushbytes 0x00040000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000007 // 0x00040000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000007; itxn_field ApplicationArgs; itxn_submit
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1245, in send_atomic_transaction_composer
    atc = prepare_group_for_sending(
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 867, in prepare_group_for_sending
    execution_info = _get_group_execution_info(
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 726, in _get_group_execution_info
    raise ValueError(
ValueError: Error resolving execution info via simulate in transaction 0: transaction 4ZINOGWBBV3THOZWPBE527H4QXC6G3V4RPKADJCBVZLXJ4QDDZWA: logic eval error: app 7811247409245259505 does not exist. Details: app=1097, pc=235, opcodes=itxn_field ApplicationArgs; itxn_field ApplicationArgs; itxn_submit
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1245, in send_atomic_transaction_composer
    atc = prepare_group_for_sending(
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 867, in prepare_group_for_sending
    execution_info = _get_group_execution_info(
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 726, in _get_group_execution_info
    raise ValueError(
ValueError: Error resolving execution info via simulate in transaction 0: transaction OUOXERAHBWDFI2VLZR56WWT2VZ5L42M4LYHMEO6RYOSB6HANTVHQ: logic eval error: app 7811247409245259505 does not exist. Details: app=1097, pc=235, opcodes=itxn_field ApplicationArgs; itxn_field ApplicationArgs; itxn_submit
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1245, in send_atomic_transaction_composer
    atc = prepare_group_for_sending(
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 867, in prepare_group_for_sending
    execution_info = _get_group_execution_info(
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 726, in _get_group_execution_info
    raise ValueError(
ValueError: Error resolving execution info via simulate in transaction 0: transaction 2RF77CXGULNA32BGS6GJ7WC6KJXTH7QCYY4K2QC25WRQIEAHNN4A: logic eval error: app 7811247409245259505 does not exist. Details: app=1097, pc=235, opcodes=itxn_field ApplicationArgs; itxn_field ApplicationArgs; itxn_submit
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/v2client/algod.py", line 106, in algod_request
    resp = urlopen(req, timeout=timeout)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 215, in urlopen
    return opener.open(url, data, timeout)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 521, in open
    response = meth(req, response)
               ^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 630, in http_response
    response = self.parent.error(
               ^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 559, in error
    return self._call_chain(*args)
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 492, in _call_chain
    result = func(*args)
             ^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 639, in http_error_default
    raise HTTPError(req.full_url, code, msg, hdrs, fp)
urllib.error.HTTPError: HTTP Error 400: Bad Request

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1284, in send_atomic_transaction_composer
    result = atc.execute(algod, wait_rounds=max_rounds_to_wait or 5)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/atomic_transaction_composer.py", line 868, in execute
    self.submit(client)
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/atomic_transaction_composer.py", line 731, in submit
    client.send_transactions(self.signed_txns)
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/v2client/algod.py", line 443, in send_transactions
    return self.send_raw_transaction(
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/v2client/algod.py", line 371, in send_raw_transaction
    resp = self.algod_request("POST", req, data=txn_bytes, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/v2client/algod.py", line 116, in algod_request
    raise error.AlgodHTTPError(m, code, j.get("data"))
algosdk.error.AlgodHTTPError: TransactionPool.Remember: transaction XYRCTLQV6MC3X7SKIHX2TOPCMCRVRBXRX35EEF3QU4ZVUIXU6NXQ: logic eval error: unavailable App 7946528078624357465. Details: app=1099, pc=223, opcodes=intc_2 // 0; itxn_field Fee; itxn_field ApplicationID
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1245, in send_atomic_transaction_composer
    atc = prepare_group_for_sending(
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 867, in prepare_group_for_sending
    execution_info = _get_group_execution_info(
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 726, in _get_group_execution_info
    raise ValueError(
ValueError: Error resolving execution info via simulate in transaction 0: transaction QHX4UIY6SES5YGCU2K5GT3RY2GV5OJDKKX2L6TKVN26VFQSQCURA: logic eval error: app 7946528078624357465 does not exist. Details: app=1099, pc=235, opcodes=itxn_field ApplicationArgs; itxn_field ApplicationArgs; itxn_submit
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1245, in send_atomic_transaction_composer
    atc = prepare_group_for_sending(
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 867, in prepare_group_for_sending
    execution_info = _get_group_execution_info(
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 726, in _get_group_execution_info
    raise ValueError(
ValueError: Error resolving execution info via simulate in transaction 0: transaction EODMDL47YYCU7B6RITKIADA455N5V7XTT35QSW6HG7F4IUCIEVXA: logic eval error: app 7946528078624357465 does not exist. Details: app=1099, pc=235, opcodes=itxn_field ApplicationArgs; itxn_field ApplicationArgs; itxn_submit
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1245, in send_atomic_transaction_composer
    atc = prepare_group_for_sending(
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 867, in prepare_group_for_sending
    execution_info = _get_group_execution_info(
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 726, in _get_group_execution_info
    raise ValueError(
ValueError: Error resolving execution info via simulate in transaction 0: transaction GHLV5RMPKIU25DKBYKEOKCX7BE57AZNHNNB22DAJDC7DRERICCPA: logic eval error: app 4758227201052119747 does not exist. Details: app=1101, pc=161, opcodes=bytec_0 // 0x6b2c0e15; itxn_field ApplicationArgs; itxn_submit
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1245, in send_atomic_transaction_composer
    atc = prepare_group_for_sending(
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 867, in prepare_group_for_sending
    execution_info = _get_group_execution_info(
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 726, in _get_group_execution_info
    raise ValueError(
ValueError: Error resolving execution info via simulate in transaction 0: transaction HGNE45NIUW2SCYJ4IUILV6FHWHQFFFSVPKUMVI6DUXK7AN3W5YJA: logic eval error: app 3196879129647165224 does not exist. Details: app=1103, pc=984, opcodes=dup; itxn_field ApplicationArgs; itxn_submit
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1245, in send_atomic_transaction_composer
    atc = prepare_group_for_sending(
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 867, in prepare_group_for_sending
    execution_info = _get_group_execution_info(
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 726, in _get_group_execution_info
    raise ValueError(
ValueError: Error resolving execution info via simulate in transaction 0: transaction ATKVNF7RY222AO7VPOBVINWI2OOQXN2SAKPA6CCQ6IVI7TVXKDXA: logic eval error: app 3196879129647165224 does not exist. Details: app=1103, pc=1209, opcodes=dup; itxn_field ApplicationArgs; itxn_submit

=== abiEncodeDecode (19 tests) ===
  ✗ abi_decode_calldata: 0p/1f/0s
  ✗ abi_decode_simple: 0p/1f/0s
  ✗ abi_decode_simple_storage: 0p/1f/0s
  ✗ abi_encode_call: 0p/1f/0s
  ✗ abi_encode_call_declaration: 0p/1f/0s
  ✗ abi_encode_call_is_consistent: 0p/9f/0s
  ✗ abi_encode_call_memory: 0p/1f/0s
  ✗ abi_encode_call_special_args: 0p/7f/0s
  ✗ abi_encode_call_uint_bytes: 0p/2f/0s
  ✗ abi_encode_empty_string_v1: 0p/1f/0s
  ⚠ abi_encode_with_selector: compilation failed
  ⚠ abi_encode_with_selectorv2: compilation failed
  ✗ abi_encode_with_signature: 0p/4f/0s
  ✗ abi_encode_with_signaturev2: 0p/5f/0s
  ✗ contract_array: 0p/2f/0s
  ✗ contract_array_v2: 0p/4f/0s
  ⚠ offset_overflow_in_array_decoding: compilation failed
  ⚠ offset_overflow_in_array_decoding_2: compilation failed
  ⚠ offset_overflow_in_array_decoding_3: compilation failed

=== abiEncoderV1 (28 tests) ===
  ✗ abi_decode_dynamic_array: 0p/1f/0s
  ✓ abi_decode_fixed_arrays: 1p/0s
  ✓ abi_decode_static_array: 1p/0s
  ✓ abi_decode_static_array_v2: 1p/0s
  ✓ abi_decode_trivial: 1p/0s
  ✗ abi_decode_v2: 0p/1f/0s
  ✗ abi_decode_v2_calldata: 0p/1f/0s
  ✗ abi_decode_v2_storage: 0p/1f/0s
  ✓ abi_encode: 5p/0s
  ✗ abi_encode_call: 0p/1f/0s
  ✗ abi_encode_calldata_slice: 0p/2f/0s
  ✗ abi_encode_decode_simple: 0p/1f/0s
  ⚠ abi_encode_empty_string: compilation failed
  ✓ abi_encode_rational: 1p/0s
  ✓ bool_out_of_bounds: 4p/0s
  ✓ byte_arrays: 2p/0s
  ✗ calldata_arrays_too_large: 0p/1f/0s
  ✗ calldata_bytes_bytes32_arrays: 0p/1f/0s
  ✗ decode_slice: 0p/1f/0s
  ✓ dynamic_arrays: 1p/0s
  ⚠ dynamic_memory_copy: compilation failed
  ✓ enums: 4p/0s
  ✗ memory_dynamic_array_and_calldata_bytes: 0p/2f/0s
  ✗ memory_params_in_external_function: 0p/1f/0s
  ⚠ return_dynamic_types_cross_call_advanced: compilation failed
  ✗ return_dynamic_types_cross_call_out_of_range_1: 0p/3f/0s
  ✗ return_dynamic_types_cross_call_out_of_range_2: 1p/2f/0s
  ✗ return_dynamic_types_cross_call_simple: 0p/1f/0s

=== abiEncoderV2 (44 tests) ===
  ✗ abi_encode_calldata_slice: 0p/2f/0s
  ✗ abi_encode_empty_string_v2: 0p/1f/0s
  ✓ abi_encode_rational_v2: 1p/0s
  --- progress: 50/1322 (3%) | pass:11 fail:31 compile_err:8 ---
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1245, in send_atomic_transaction_composer
    atc = prepare_group_for_sending(
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 867, in prepare_group_for_sending
    execution_info = _get_group_execution_info(
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 726, in _get_group_execution_info
    raise ValueError(
ValueError: Error resolving execution info via simulate in transaction 0: transaction CWZLBNXOPJQ3SSBTJEA673CDUPBVME53HAUH6FYEEJVHBKUBUYXQ: logic eval error: roundCowBase.getCreator() cidx: 11823909717781604944 ctype: 1 err: sql: converting argument $1 type: uint64 values with high bit set are not supported. Details: app=1112, pc=168, opcodes=bytec_0 // 0x290efb48; itxn_field ApplicationArgs; itxn_submit
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1245, in send_atomic_transaction_composer
    atc = prepare_group_for_sending(
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 867, in prepare_group_for_sending
    execution_info = _get_group_execution_info(
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 726, in _get_group_execution_info
    raise ValueError(
ValueError: Error resolving execution info via simulate in transaction 0: transaction 4EPWM4YA3HBI3BIP5UIKB6CHHYLHEWUGR7SFJIJBUNUYXYBDD25A: logic eval error: extraction end 2 is beyond length: 0. Details: app=1126, pc=492, opcodes=frame_dig -4; dig 1; extract_uint16
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1245, in send_atomic_transaction_composer
    atc = prepare_group_for_sending(
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 867, in prepare_group_for_sending
    execution_info = _get_group_execution_info(
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 726, in _get_group_execution_info
    raise ValueError(
ValueError: Error resolving execution info via simulate in transaction 0: transaction U26XWKW6CIRXJMW3T2HKZXCTQKZO36FEBKNW6QKMWIBE7KQ74NEQ: logic eval error: extraction end 2 is beyond length: 0. Details: app=1126, pc=492, opcodes=frame_dig -4; dig 1; extract_uint16
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1245, in send_atomic_transaction_composer
    atc = prepare_group_for_sending(
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 867, in prepare_group_for_sending
    execution_info = _get_group_execution_info(
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 726, in _get_group_execution_info
    raise ValueError(
ValueError: Error resolving execution info via simulate in transaction 0: transaction 2RPBLY3UVVWQKVKWEKSIWL73P7JWTTQQGO3YU3BKUZYMYLSRY5WA: logic eval error: roundCowBase.getCreator() cidx: 12815511716135941174 ctype: 1 err: sql: converting argument $1 type: uint64 values with high bit set are not supported. Details: app=1146, pc=1065, opcodes=itxn_field ApplicationArgs; itxn_field ApplicationArgs; itxn_submit
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1245, in send_atomic_transaction_composer
    atc = prepare_group_for_sending(
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 867, in prepare_group_for_sending
    execution_info = _get_group_execution_info(
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 726, in _get_group_execution_info
    raise ValueError(
ValueError: Error resolving execution info via simulate in transaction 0: transaction UVWCIL2E4PAR2I2MI4E6HSGJ7MP2U6LS776DNL2AV6AEYWT76WEQ: logic eval error: roundCowBase.getCreator() cidx: 12815511716135941174 ctype: 1 err: sql: converting argument $1 type: uint64 values with high bit set are not supported. Details: app=1146, pc=1117, opcodes=itxn_field ApplicationArgs; itxn_field ApplicationArgs; itxn_submit
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1245, in send_atomic_transaction_composer
    atc = prepare_group_for_sending(
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 867, in prepare_group_for_sending
    execution_info = _get_group_execution_info(
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 726, in _get_group_execution_info
    raise ValueError(
ValueError: Error resolving execution info via simulate in transaction 0: transaction XNW7YF5X4CLIHZR5I4GHYAEMPHGDMB5MCWA6K3YWJZB4MIUY7ALA: logic eval error: roundCowBase.getCreator() cidx: 12815511716135941174 ctype: 1 err: sql: converting argument $1 type: uint64 values with high bit set are not supported. Details: app=1146, pc=1256, opcodes=itxn_field ApplicationArgs; itxn_field ApplicationArgs; itxn_submit
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1245, in send_atomic_transaction_composer
    atc = prepare_group_for_sending(
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 867, in prepare_group_for_sending
    execution_info = _get_group_execution_info(
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 726, in _get_group_execution_info
    raise ValueError(
ValueError: Error resolving execution info via simulate in transaction 0: transaction 53SF5Y2WCIXYDWZ2VKCWSB2W7JELRNAIH4NZJYUOOHSWZHZOLWNQ: logic eval error: roundCowBase.getCreator() cidx: 12815511716135941174 ctype: 1 err: sql: converting argument $1 type: uint64 values with high bit set are not supported. Details: app=1146, pc=1396, opcodes=itxn_field ApplicationArgs; itxn_field ApplicationArgs; itxn_submit
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/v2client/algod.py", line 106, in algod_request
    resp = urlopen(req, timeout=timeout)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 215, in urlopen
    return opener.open(url, data, timeout)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 521, in open
    response = meth(req, response)
               ^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 630, in http_response
    response = self.parent.error(
               ^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 559, in error
    return self._call_chain(*args)
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 492, in _call_chain
    result = func(*args)
             ^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 639, in http_error_default
    raise HTTPError(req.full_url, code, msg, hdrs, fp)
urllib.error.HTTPError: HTTP Error 400: Bad Request

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1284, in send_atomic_transaction_composer
    result = atc.execute(algod, wait_rounds=max_rounds_to_wait or 5)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/atomic_transaction_composer.py", line 868, in execute
    self.submit(client)
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/atomic_transaction_composer.py", line 731, in submit
    client.send_transactions(self.signed_txns)
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/v2client/algod.py", line 443, in send_transactions
    return self.send_raw_transaction(
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/v2client/algod.py", line 371, in send_raw_transaction
    resp = self.algod_request("POST", req, data=txn_bytes, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/v2client/algod.py", line 116, in algod_request
    raise error.AlgodHTTPError(m, code, j.get("data"))
algosdk.error.AlgodHTTPError: TransactionPool.Remember: transaction FX6P7SRSSGB7D6SESL6GNX2BIWM4EINU6HYNICSUMWBRN42HDLFQ: logic eval error: extraction end 64 is beyond length: 32. Details: app=1164, pc=388, opcodes=*; intc_0 // 32; extract3
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/v2client/algod.py", line 106, in algod_request
    resp = urlopen(req, timeout=timeout)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 215, in urlopen
    return opener.open(url, data, timeout)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 521, in open
    response = meth(req, response)
               ^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 630, in http_response
    response = self.parent.error(
               ^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 559, in error
    return self._call_chain(*args)
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 492, in _call_chain
    result = func(*args)
             ^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 639, in http_error_default
    raise HTTPError(req.full_url, code, msg, hdrs, fp)
urllib.error.HTTPError: HTTP Error 400: Bad Request

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1284, in send_atomic_transaction_composer
    result = atc.execute(algod, wait_rounds=max_rounds_to_wait or 5)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/atomic_transaction_composer.py", line 868, in execute
    self.submit(client)
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/atomic_transaction_composer.py", line 731, in submit
    client.send_transactions(self.signed_txns)
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/v2client/algod.py", line 443, in send_transactions
    return self.send_raw_transaction(
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/v2client/algod.py", line 371, in send_raw_transaction
    resp = self.algod_request("POST", req, data=txn_bytes, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/v2client/algod.py", line 116, in algod_request
    raise error.AlgodHTTPError(m, code, j.get("data"))
algosdk.error.AlgodHTTPError: TransactionPool.Remember: transaction NHIUKU4LNY3XZYX6LRHJXGZ6PP5WEOSZ4M7OXT5EJUTLNSGOHCLA: logic eval error: invalid Box reference 0x73. Details: app=1164, pc=454, opcodes=assert; bytec_2 // "s"; box_del
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/v2client/algod.py", line 106, in algod_request
    resp = urlopen(req, timeout=timeout)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 215, in urlopen
    return opener.open(url, data, timeout)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 521, in open
    response = meth(req, response)
               ^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 630, in http_response
    response = self.parent.error(
               ^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 559, in error
    return self._call_chain(*args)
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 492, in _call_chain
    result = func(*args)
             ^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 639, in http_error_default
    raise HTTPError(req.full_url, code, msg, hdrs, fp)
urllib.error.HTTPError: HTTP Error 400: Bad Request

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1284, in send_atomic_transaction_composer
    result = atc.execute(algod, wait_rounds=max_rounds_to_wait or 5)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/atomic_transaction_composer.py", line 868, in execute
    self.submit(client)
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/atomic_transaction_composer.py", line 731, in submit
    client.send_transactions(self.signed_txns)
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/v2client/algod.py", line 443, in send_transactions
    return self.send_raw_transaction(
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/v2client/algod.py", line 371, in send_raw_transaction
    resp = self.algod_request("POST", req, data=txn_bytes, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/v2client/algod.py", line 116, in algod_request
    raise error.AlgodHTTPError(m, code, j.get("data"))
algosdk.error.AlgodHTTPError: TransactionPool.Remember: transaction C4UZFRS3ZSIODG4NJWRPP6OPMZIAXMSXKRSLVZDF3KMVGNAUYLEA: logic eval error: invalid Box reference 0x61546d70. Details: app=1190, pc=389, opcodes=assert; bytec_1 // "aTmp"; box_del
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/v2client/algod.py", line 106, in algod_request
    resp = urlopen(req, timeout=timeout)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 215, in urlopen
    return opener.open(url, data, timeout)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 521, in open
    response = meth(req, response)
               ^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 630, in http_response
    response = self.parent.error(
               ^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 559, in error
    return self._call_chain(*args)
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 492, in _call_chain
    result = func(*args)
             ^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 639, in http_error_default
    raise HTTPError(req.full_url, code, msg, hdrs, fp)
urllib.error.HTTPError: HTTP Error 400: Bad Request

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1284, in send_atomic_transaction_composer
    result = atc.execute(algod, wait_rounds=max_rounds_to_wait or 5)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/atomic_transaction_composer.py", line 868, in execute
    self.submit(client)
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/atomic_transaction_composer.py", line 731, in submit
    client.send_transactions(self.signed_txns)
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/v2client/algod.py", line 443, in send_transactions
    return self.send_raw_transaction(
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/v2client/algod.py", line 371, in send_raw_transaction
    resp = self.algod_request("POST", req, data=txn_bytes, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/v2client/algod.py", line 116, in algod_request
    raise error.AlgodHTTPError(m, code, j.get("data"))
algosdk.error.AlgodHTTPError: TransactionPool.Remember: transaction IAARXMGAQ4YGUCBNDJ6HCILYRAUGFAKQUAR43KWYGG4E4MK7XFHA: logic eval error: extraction end 96 is beyond length: 64. Details: app=1190, pc=455, opcodes=*; intc_0 // 32; extract3
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/v2client/algod.py", line 106, in algod_request
    resp = urlopen(req, timeout=timeout)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 215, in urlopen
    return opener.open(url, data, timeout)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 521, in open
    response = meth(req, response)
               ^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 630, in http_response
    response = self.parent.error(
               ^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 559, in error
    return self._call_chain(*args)
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 492, in _call_chain
    result = func(*args)
             ^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 639, in http_error_default
    raise HTTPError(req.full_url, code, msg, hdrs, fp)
urllib.error.HTTPError: HTTP Error 400: Bad Request

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1284, in send_atomic_transaction_composer
    result = atc.execute(algod, wait_rounds=max_rounds_to_wait or 5)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/atomic_transaction_composer.py", line 868, in execute
    self.submit(client)
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/atomic_transaction_composer.py", line 731, in submit
    client.send_transactions(self.signed_txns)
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/v2client/algod.py", line 443, in send_transactions
    return self.send_raw_transaction(
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/v2client/algod.py", line 371, in send_raw_transaction
    resp = self.algod_request("POST", req, data=txn_bytes, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/v2client/algod.py", line 116, in algod_request
    raise error.AlgodHTTPError(m, code, j.get("data"))
algosdk.error.AlgodHTTPError: TransactionPool.Remember: transaction UGULKEFZIE2Z36KIY2T3VSPL3ULCYRIC7MV3RUPIAH3G2M7OD5GA: logic eval error: invalid Box reference 0x61546d70. Details: app=1190, pc=577, opcodes=assert; bytec_1 // "aTmp"; box_del
Received error executing Atomic Transaction Composer, for more information enable the debug flag
Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/v2client/algod.py", line 106, in algod_request
    resp = urlopen(req, timeout=timeout)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 215, in urlopen
    return opener.open(url, data, timeout)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 521, in open
    response = meth(req, response)
               ^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 630, in http_response
    response = self.parent.error(
               ^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 559, in error
    return self._call_chain(*args)
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 492, in _call_chain
    result = func(*args)
             ^^^^^^^^^^^
  File "/usr/lib/python3.12/urllib/request.py", line 639, in http_error_default
    raise HTTPError(req.full_url, code, msg, hdrs, fp)
urllib.error.HTTPError: HTTP Error 400: Bad Request

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/argi/.local/lib/python3.12/site-packages/algokit_utils/transactions/transaction_composer.py", line 1284, in send_atomic_transaction_composer
    result = atc.execute(algod, wait_rounds=max_rounds_to_wait or 5)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/atomic_transaction_composer.py", line 868, in execute
    self.submit(client)
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/atomic_transaction_composer.py", line 731, in submit
    client.send_transactions(self.signed_txns)
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/v2client/algod.py", line 443, in send_transactions
    return self.send_raw_transaction(
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/v2client/algod.py", line 371, in send_raw_transaction
    resp = self.algod_request("POST", req, data=txn_bytes, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/argi/.local/lib/python3.12/site-packages/algosdk/v2client/algod.py", line 116, in algod_request
    raise error.AlgodHTTPError(m, code, j.get("data"))
algosdk.error.AlgodHTTPError: TransactionPool.Remember: transaction RUQHITJYOUFL2VL7VAEIJTLIRRYX4EGFRPJUQB6NLYURVYA4HYKA: logic eval error: extraction end 64 is beyond length: 32. Details: app=1190, pc=659, opcodes=*; intc_0 // 32; extract3
